Anpassungen an der Page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -2,33 +2,35 @@ button.buy=Buy
 button.delete=Delete
 button.edit=Edit
 button.remove=Remove
-button.save=Save wine
+button.save=Save Products
 button.upload=Upload
 cart.no.products=Shopping cart is empty
-enum.category.1=White wine
+enum.category.1=Category1
 enum.category.2=Red wine
 enum.category.3=Rosé
-enum.category.4=Sparkling
+enum.category.4=Category4
+enum.category.5=Category5
 enum.subcategory.1=Silvano
 enum.subcategory.2=Zinfandel
 enum.subcategory.3=Burgundy
 enum.subcategory.4=Merlot
+enum.subcategory.5=UCategory5
 enum.subcategory.unknown=Unknown
 footer.help=Help
 footer.imprint=Legal notice
-footer.title=Wine shop
-h2.edit.product=Edit wine
-h3.edit.product=Please enter the data of the wine here:
+footer.title=Product shop
+h2.edit.product=Edit Product
+h3.edit.product=Please enter the data of the Product here:
 label.category.short=Category:
 label.file=Image of product
-label.category=Category of the wine
-label.name=Name of the wine
+label.category=Category of the Product
+label.name=Name of the Product
 label.origin.short=Origin:
 label.origin=Origin of the product
 label.price.short=Price:
 label.price=Price of the product
 label.subcategory.short=Grape variety:
-label.subcategory=Grape variety of the wine
+label.subcategory=Subcategory of the Product
 lang.change=Language
 lang.de=German
 lang.en=English
