änderungen im Text

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -41,3 +41,5 @@ nav.portfolio=Shop
 nav.product=Produkte erfassen 
 no.products=Noch keine Produkte erfasst!
 select=-- Bitte wählen Sie --
+text.about=Das ist mein zukünftiger Text
+text2.about=Das ist der Zweite Text
