--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -41,3 +41,5 @@ nav.portfolio=Shop
 nav.product=Enter product
 no.products=No products listed yet!
 select=-- Please select --
+text.about=This is my future text
+text2.about=This is the second text
