Sicherung zur sicherung ;)

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,6 +1,7 @@
 button.buy=Kaufen
 button.delete=Löschen
 button.edit=Bearbeiten
+button.checkout=Zur Kasse
 button.remove=Entfernen
 button.save=Produkte speichern
 button.upload=Hochladen
@@ -37,8 +38,8 @@ lang.en=Englisch
 lang.select=-- Wählen --
 nav.about=Über uns
 nav.cart=Warenkorb
-nav.login=Login
-nav.logout=Logout
+nav.login=Anmelden
+nav.logout=Ausloggen 
 nav.portfolio=Shop
 nav.product=Produkte erfassen 
 no.products=Noch keine Produkte erfasst!
