--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -6,15 +6,15 @@ button.save=Save Products
 button.upload=Upload
 cart.no.products=Shopping cart is empty
 enum.category.1=Category1
-enum.category.2=Red wine
-enum.category.3=Rosé
+enum.category.2=Category2
+enum.category.3=Category3
 enum.category.4=Category4
 enum.category.5=Category5
-enum.subcategory.1=Silvano
-enum.subcategory.2=Zinfandel
-enum.subcategory.3=Burgundy
-enum.subcategory.4=Merlot
-enum.subcategory.5=UCategory5
+enum.subcategory.1=Subcategory1
+enum.subcategory.2=Subcategory2
+enum.subcategory.3=Subcategory3
+enum.subcategory.4=Subcategory4
+enum.subcategory.5=Subcategory5
 enum.subcategory.unknown=Unknown
 footer.help=Help
 footer.imprint=Legal notice
