Strucktur in Katalog und Text angepasst.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -45,3 +45,4 @@ no.products=Noch keine Produkte erfasst!
 select=-- Bitte wählen Sie --
 text.about=Das ist mein zukünftiger Text
 text2.about=Das ist der Zweite Text
+label.nr.products=
