--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,31 +1,32 @@
 button.buy=Kaufen
+button.checkout=Zur Kasse
 button.delete=Löschen
 button.edit=Bearbeiten
-button.checkout=Zur Kasse
 button.remove=Entfernen
 button.save=Produkte speichern
 button.upload=Hochladen
 cart.no.products=Warenkorb ist leer
-enum.category.1=Kategorie1
-enum.category.2=Kategorie2
-enum.category.3=Kategorie3
-enum.category.4=Kategorie4
-enum.category.5=Kategorie5
-enum.subcategory.1=Unterkategorie1
-enum.subcategory.2=Unterkategorie2
-enum.subcategory.3=Unterkategorie3
-enum.subcategory.4=Unterkategorie4
-enum.subcategory.5=Unterkategorie5
-enum.subcategory.unknown=Unbekannt
+enum.category.1=1 Tag getragen
+enum.category.2=2 Tage getragen
+enum.category.3=3 Tage getragen
+enum.category.4=4 Tage getragen
+enum.category.5=5 Tage getragen
+enum.subcategory.1=normale nutzung
+enum.subcategory.2=mit einem Männlichen Erlebniss
+enum.subcategory.3=mit mehreren Männlichen Erlebnissen
+enum.subcategory.4=
+enum.subcategory.5=
+enum.subcategory.unknown=
 footer.help=Hilfe
 footer.imprint=Impressum
 footer.title=Produkt-Shop
 h2.edit.product=Produkt bearbeiten
-h3.edit.product=Bitte geben Sie hier die Daten des Produktes ein:
+h3.edit.product=Hier gibst du die Daten für dein Produkt ein:
 label.category.short=Kategorie:
-label.file=Foto des Produkts
 label.category=Kategorie des Produktes
+label.file=Foto des Produkts
 label.name=Name des Produktes
+label.nr.products=Anzahl der Produkte:
 label.origin.short=Herkunft:
 label.origin=Herkunft des Produktes
 label.price.short=Preis:
@@ -36,13 +37,16 @@ lang.change=Sprache
 lang.de=Deutsch
 lang.en=Englisch
 lang.select=-- Wählen --
-nav.about=Über uns
+nav.about=Weist du das von mir?
 nav.cart=Warenkorb
 nav.login=Anmelden
 nav.logout=Ausloggen 
-nav.portfolio=Shop
+nav.portfolio=Meine Produkte
 nav.product=Produkte erfassen 
 no.products=Noch keine Produkte erfasst!
 select=-- Bitte wählen Sie --
 text.about=Das ist mein zukünftiger Text
 text2.about=Das ist der Zweite Text
+table.image=Bild
+table.description=Produkt
+table.price=Preis
