--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,4 +1,6 @@
 button.buy=Kaufen
+button.no=Nein
+button.yes=Ja
 button.checkout=Zur Kasse
 button.delete=Löschen
 button.edit=Bearbeiten
@@ -71,5 +73,3 @@ validation.produkt.kategorie=Bitte wählen Sie eine Kategorie aus
 validation.produkt.name=Bitte geben Sie einen Produktnamen ein
 validation.produkt.preis=Der Preis muss größer als 1€ sein
 validation.produkt.unterkategorie=Bitte geben Sie eine Farbe ein
-
-
