Text Struktur angepasst

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,14 +1,16 @@
-about.p1=Diese <a href="https://de.wikipedia.org/wiki/Webanwendung" target="_blank">Web-App</a> ist im Rahmen des \
-<a href="https://www.karrieretutor.de/azav/java/" target="_blank">Java-Kurses</a> \
-von <a href="https://www.karrieretutor.de" target="_blank">karriere tutor</a>&trade; entstanden. \
-Der Server-Teil basiert auf <a href="https://spring.io/projects/spring-boot" target="_blank">Spring Boot</a> \
-und verwendet <a href="https://de.wikipedia.org/wiki/Representational_State_Transfer" target="_blank">REST-Services</a> \
-im <a href="https://de.wikipedia.org/wiki/JavaScript_Object_Notation" target="_blank">JSON-Format</a>. \
-Der Client-Teil verwendet <a href="https://getmdl.io/started/index.html" target="_blank">Material Design Lite</a> \
-und <a href="https://vuejs.org/v2/guide/" target="_blank">Vue.js</a>. Der Source-Code befindet sich auf \
-<a href="https://github.com/artingo/spring-boot" target="_blank">GitHub</a> und eine Demo-Version wird auf \
-<a href="https://karrieretutor-shop.herokuapp.com" target="_blank">Heroku</a> gehosted.
-about.title=Über diese Web-App
+about.p1=ich komme aus Deutschland und ich freue mich sehr darauf, mein Sexleben mit meinen Fans zu teilen, \
+  indem ich alle Inhalte <a href="https://onlyfans.com/misterspermanent" target="_blank">hier</a> hochlade! \
+  Meine Aufgabe ist es, Menschen glücklich zu machen. \
+  Ich liebe Sex in all seinen vielen Formen, von leidenschaftlich bis hart und rau. \
+  Ich werde jede Woche neue <a href="https://onlyfans.com/misterspermanent" target="_blank">Videos</a> und <a href="https://onlyfans.com/misterspermanent" target="_blank">Fotos</a> hochladen und kann es kaum erwarten zu lesen, was ihr denkt :) \
+  Wenn Du mich unterstützen willst und dir mein Inhalt gefällt, abonnier meinen Kanal, \
+  hinterlass einen Kommentar und/oder ähnliches oder schick mir sogar eine private Nachricht! \
+  Auf Anfrage sende ich auch personalisierte Fotos und Videos! \
+  \
+  Werde mein FAN, um Zugang zu allen vorbehaltenen exklusiven Inhalten zu erhalten. \
+  Viel Spaß in meiner Welt! \
+ 
+about.title=Ich bin Miko, 
 button.buy.now=Jetzt kaufen
 button.buy=Kaufen
 button.checkout=Zur Kasse
@@ -80,7 +82,7 @@ lang.change=Sprache
 lang.de=Deutsch
 lang.en=Englisch
 lang.select=-- Wählen --
-nav.about=Über uns
+nav.about=Über Mich
 nav.cart=Warenkorb
 nav.login=Anmelden
 nav.logout=Abmelden
